Inspect Module Result Stats: - Fixed overlapping styles for html and antd tables.

--- a/app/media/styles/modules/inspect.less
+++ b/app/media/styles/modules/inspect.less
@@ -38,6 +38,12 @@
     }
   }
 
+  .inspect-stats-table {
+    tr {
+      cursor: pointer;
+    }
+  }
+
   .ant-table-small {
     border: none;
   }
